--- a/ECommerce/ECommerce/Base.lproj/Main.storyboard
+++ b/ECommerce/ECommerce/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PA4-su-Cuu">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="gtU-iK-6iY">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="PA4-su-Cuu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="L8E-wx-cMa">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="vqc-aJ-yYg" kind="relationship" relationship="viewControllers" id="f5B-BC-GS4"/>
+                        <segue destination="vpy-2g-cc8" kind="relationship" relationship="viewControllers" id="LoU-bg-k2O"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0k3-Do-jJs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1143" y="107"/>
+        </scene>
+        <!--Ranking Navigation-->
+        <scene sceneID="iQy-Dy-beC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vpy-2g-cc8" userLabel="Ranking Navigation" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Ranking" id="why-Yf-eyc"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xmu-WC-D1B">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Mkh-XJ-jt9" kind="relationship" relationship="rootViewController" id="iYW-St-laQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OYw-TI-F1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="329" y="448"/>
+        </scene>
+        <!--Category Navigation-->
+        <scene sceneID="72n-FW-z8s">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vqc-aJ-yYg" userLabel="Category Navigation" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Category" id="rms-sg-IVL"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="r1P-lb-7Aw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Yqp-I8-vuS" kind="relationship" relationship="rootViewController" id="SdG-rk-XFw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CyV-vE-Gp4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="330" y="-255"/>
+        </scene>
+        <!--Category View Controller-->
+        <scene sceneID="OcT-3m-Qhs">
+            <objects>
+                <viewController storyboardIdentifier="CategoryViewController" id="Yqp-I8-vuS" userLabel="Category View Controller" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l6b-c5-1QQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eeV-vC-DMF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="66" id="mwQ-6S-N5Y">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mwQ-6S-N5Y" id="AhU-LW-bbW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Yqp-I8-vuS" id="rrH-XR-gWm"/>
+                                    <outlet property="delegate" destination="Yqp-I8-vuS" id="nuc-f7-zKg"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="eeV-vC-DMF" firstAttribute="top" secondItem="7eG-Yn-ZLh" secondAttribute="top" id="5Lx-uA-w2J"/>
+                            <constraint firstItem="eeV-vC-DMF" firstAttribute="trailing" secondItem="7eG-Yn-ZLh" secondAttribute="trailing" id="lEe-hP-dXV"/>
+                            <constraint firstItem="eeV-vC-DMF" firstAttribute="leading" secondItem="7eG-Yn-ZLh" secondAttribute="leading" id="vtk-Ky-bAf"/>
+                            <constraint firstItem="eeV-vC-DMF" firstAttribute="bottom" secondItem="7eG-Yn-ZLh" secondAttribute="bottom" id="y3B-lq-eRF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7eG-Yn-ZLh"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Category" id="NDg-Zm-ix8"/>
+                    <connections>
+                        <outlet property="tableviewCategory" destination="eeV-vC-DMF" id="Dyq-Kg-7Wm"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QYn-8d-3AJ" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1589.5999999999999" y="-255.02248875562222"/>
+        </scene>
+        <!--Ranking List-->
+        <scene sceneID="BCt-Yz-I3C">
+            <objects>
+                <viewController storyboardIdentifier="RankingViewController" id="Mkh-XJ-jt9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ODN-tY-um2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hpP-hP-d7Y">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="66" id="fud-tA-eSp">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fud-tA-eSp" id="z95-lX-8uv">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Mkh-XJ-jt9" id="xJ5-92-0nr"/>
+                                    <outlet property="delegate" destination="Mkh-XJ-jt9" id="eTM-jD-QWj"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hpP-hP-d7Y" firstAttribute="leading" secondItem="eFj-Yw-Z1V" secondAttribute="leading" id="BIA-yB-bEI"/>
+                            <constraint firstItem="hpP-hP-d7Y" firstAttribute="trailing" secondItem="eFj-Yw-Z1V" secondAttribute="trailing" id="nBT-V0-Z7D"/>
+                            <constraint firstItem="hpP-hP-d7Y" firstAttribute="bottom" secondItem="eFj-Yw-Z1V" secondAttribute="bottom" id="qg0-7w-Kx4"/>
+                            <constraint firstItem="hpP-hP-d7Y" firstAttribute="top" secondItem="eFj-Yw-Z1V" secondAttribute="top" id="wQH-bn-PjH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eFj-Yw-Z1V"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Ranking List" id="Vgc-5L-OTP"/>
+                    <connections>
+                        <outlet property="tableviewRanking" destination="hpP-hP-d7Y" id="nfT-Pn-TDg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8ze-Xp-Q2p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1589.5999999999999" y="448.42578710644682"/>
         </scene>
     </scenes>
 </document>
